--- a/JqueryDatePicker/Views/Home/Index.cshtml
+++ b/JqueryDatePicker/Views/Home/Index.cshtml
@@ -1,31 +1,46 @@
 ﻿@{
+    /**/
+
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css" />
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+
+@model JqueryDatePicker.Models.Customer
+
+@using (Html.BeginForm("Index", "Home"))
+{
+    <div style="width:100%">
+        <div style="width:20%">
+            
+        </div>
+        <div style="width:60%">
+            <h2>
+                @ViewBag._firstDate
+            </h2>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div>
+        @Html.LabelFor(c => c.JoinDate)
+        @Html.TextBoxFor(c => c.JoinDate, new { id = "datepicker" })
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <br />
+    <div>
+        <button type="submit" class="btn btn-default">
+            Submit
+        </button>
     </div>
-</div>
+
+}
+
+
+<script src="http://code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $(function () {
+        $("#datepicker").datepicker({
+
+        });
+    });
+</script>
